--- a/css/main.css
+++ b/css/main.css
@@ -130,9 +130,39 @@ header {
   color: #444343;
   font-size: 1rem;
   font-weight: 400;
- 
 }
 .list ul li i {
-  color: #16D887;
-  margin-right: 12px
+  color: #16d887;
+  margin-right: 12px;
+}
+.plans-area h2 {
+  text-align: center;
+  color: #151414;
+  font-weight: 700;
+  font-size: 2.5rem;
+  margin-bottom: 60px;
+}
+
+.plan-info {
+  /* margin: 30px 0px; */
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.plan-card img {
+  width: 76px;
+}
+
+.plan-card h3 {
+  color: #151414;
+  font-weight: 700;
+  font-size: 1.4rem;
+  margin: 10px 0px;
+}
+
+.plan-card p {
+  color: #737272;
+  font-size: 1.2rem;
+  font-weight: 500;
 }
