--- a/css/main.css
+++ b/css/main.css
@@ -166,3 +166,33 @@ header {
   font-size: 1.2rem;
   font-weight: 500;
 }
+.bottom-banner-area {
+  margin: 100px 0px;
+  border-radius: 5px;
+  background-image: url("../images/watch.png");
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+}
+.bottom-banner-info {
+  margin: 100px 0px;
+  border-radius: 5px;
+  background-image: url("../images/gradient1.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 300px;
+}
+.bottom-banner-text h1 {
+    color: #fff;
+    margin-bottom: 20px;
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+.bottom-banner-text {
+    display: flex;
+    position: absolute;
+    align-items: center;
+    height: 300px;
+    margin-left: 64px;
+}
